fix: signup API routing and add database setup
- Fix middleware to skip API routes (was redirecting POST to /login)
- Fix api-client fetch options order to preserve HTTP method
- Add INSERT policy for user_profiles table
- Add database migration script and commands
- Add DATABASE_SETUP.md documentation
- Add db:migrate, db:start, db:stop, db:studio, db:types commands

--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "start": "next start",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "db:migrate": "bun run scripts/db-migrate.ts",
+    "db:start": "supabase start",
+    "db:stop": "supabase stop",
+    "db:studio": "supabase studio",
+    "db:types": "supabase gen types typescript --local > lib/database.types.ts",
+    "db:reset": "supabase db reset"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
