feat: update the signup and organization setup

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,7 @@ NEXT_PUBLIC_VERCEL_URL=http://localhost:3000
 GOOGLE_CREDENTIALS_PATH=/path/to/credentials.json
 GOOGLE_SHEETS_CUSTOMER_CONFIG_ID=spreadsheet_id
 GOOGLE_SHEETS_ARTICLES_ID=spreadsheet_id
+
+# Super Admin (Multi-tenant)
+# The first user to sign up with this email becomes super admin
+SUPER_ADMIN_EMAIL=admin@yourdomain.com
