feat: Multi-article workflow system with CRUD, Google Sheets sync, and UI enhancements
- Transform onboarding into multi-article styles system
- Add article_styles database schema and migration scripts
- Create article styles service layer with Google Sheets sync
- Add API routes for article styles CRUD and wizard steps
- Create reusable UI components for articles management
- Add article generation wizard pages (/articles/generate/step-1,2,3)
- Add article styles management pages (/articles/styles/)
- Update dashboard with Recent Article Styles and My Articles sections
- Remove old onboarding pages and API routes
- Fix Google Sheets 'Main Sheet' range error with configurable sheet name
- Add Dashboard button to header (shows when not on dashboard)
- Enhance style detail page to display actual sample content
- Add December 6th update documentation

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "db:stop": "supabase stop",
     "db:studio": "supabase studio",
     "db:types": "supabase gen types typescript --local > lib/database.types.ts",
-    "db:reset": "supabase db reset"
+    "db:reset": "supabase db reset",
+    "db:reset:full": "bun run scripts/db-reset-full.ts"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
