feat(admin): Add comprehensive plan management UI with default admin user
- Add admin plan management pages (/admin/plans, /admin/plans/new, /admin/plans/[id]/edit)
- Create PlanTable, PlanForm, PlanFeatureManager, PasswordResetForm components
- Add API endpoints for plan features CRUD and reordering
- Add password reset API with validation
- Create default admin user seed script (admin@drafter.com / Admin@123)
- Add password validation utility with security requirements
- Update admin sidebar with Plans navigation
- Fix /subscribe page Suspense boundary for Next.js 16 build
- Add spec documentation for admin-plan-management feature
- Add daily update for 2025-12-07

--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "db:studio": "supabase studio",
     "db:types": "supabase gen types typescript --local > lib/database.types.ts",
     "db:reset": "supabase db reset",
-    "db:reset:full": "bun run scripts/db-reset-full.ts"
+    "db:reset:full": "bun run scripts/db-reset-full.ts",
+    "db:init": "bun run scripts/db-init.ts",
+    "db:init:stripe": "bun run scripts/db-init.ts --with-stripe",
+    "db:init:force": "bun run scripts/db-init.ts --force",
+    "stripe:sync": "bun run scripts/sync-stripe-plans.ts",
+    "stripe:sync:dry": "bun run scripts/sync-stripe-plans.ts --dry-run"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
