feat(ai): Add OpenAI-powered topic suggestions based on article styles
- Add lib/services/openai.ts for OpenAI API integration
- Add /api/ai/suggestions endpoint for generating topic ideas
- Update StyleFormStep2 to use real AI suggestions instead of hardcoded list
- Add refresh functionality for getting new suggestions
- Add OPENAI_API_KEY to .env.example

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,6 @@ GOOGLE_SHEETS_ARTICLES_ID=spreadsheet_id
 # Super Admin (Multi-tenant)
 # The first user to sign up with this email becomes super admin
 SUPER_ADMIN_EMAIL=admin@yourdomain.com
+
+# OpenAI API Key (for AI suggestions)
+OPENAI_API_KEY=sk-...
