feat(subscription): Make trial configurable and add Stripe sync command
- Add trial_enabled and trial_days settings to admin panel
- Create /api/admin/settings endpoint for app configuration
- Update checkout to respect trial settings (disabled by default)
- Update subscribe page to show/hide trial UI based on settings
- Add bun run stripe:sync:subscription command for Stripe sync
- Create app_config table migration (scripts/12-app-config-table.sql)
- Skip plans that already have valid Stripe IDs (unless --force)

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "db:init:stripe": "bun run scripts/db-init.ts --with-stripe",
     "db:init:force": "bun run scripts/db-init.ts --force",
     "stripe:sync": "bun run scripts/sync-stripe-plans.ts",
-    "stripe:sync:dry": "bun run scripts/sync-stripe-plans.ts --dry-run"
+    "stripe:sync:dry": "bun run scripts/sync-stripe-plans.ts --dry-run",
+    "stripe:sync:subscription": "bun run scripts/sync-stripe-subscription.ts",
+    "stripe:sync:subscription:dry": "bun run scripts/sync-stripe-subscription.ts --dry-run"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
